--- a/views/admin/addProduct.ejs
+++ b/views/admin/addProduct.ejs
@@ -24,6 +24,10 @@
           <input type="text"   placeholder="Description" name="description" id="description" class="form-control" />
         </div>
         <div class="form-outline flex-fill mb-0 mt-4">
+          <input type="text"  placeholder="brandName" name="brand" id="brand"
+            class="form-control" />
+        </div>
+        <div class="form-outline flex-fill mb-0 mt-4">
           <input type="number"   placeholder="Stock" name="stock" id="stock" class="form-control" />
         </div>
         <div class="form-outline flex-fill mb-0 mt-4">
