--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -18,6 +18,10 @@
           <label class="form-label" for="form3Example1c">Price </label>
           <input type="text" value="<%=productData.price%>" name="price" id="price" class="form-control" />
         </div>
+        <div class="form-outline flex-fill mb-3 mt-3">
+          <label class="form-label" for="form3Example1c">brandName </label>
+          <input type="text" value="<%=productData.brand%>" name="brand" id="brand" class="form-control" />
+        </div>
         <label for="">category</label>
         <div class="form-outline flex-fill mb-3  d-flex">              
           
