--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -134,7 +134,6 @@
 											</button>
 											</span>
 											<p class="mt-5 ml-3" id="<%= product.productDetail._id %>" min="0" name="quantity"><%= product.productQuantity%></p></strong>
-										 <% {console.log("product.productDetail.productQuantity");} %>
 										 <span class="input-group-btn ml-2">
 											<button type="button"  onclick="changeQuantity('<%= product._id %>','<%= product.productDetail._id %>',1)" style="background-color: #dbcc8f; " class="quantity-right-plus btn" data-type="plus" data-field="">
 											 ➕
@@ -225,8 +224,8 @@
 			</div> 
 		</section>
 
-		<!--  -->
 	
+	<!-- footer Start -->
 <footer class="ftco-footer ftco-section">
 <div class="container">
   <div class="row">
