--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -228,13 +228,14 @@
                   class="img-fluid"
                   src="<%=products.image3%>"
                   alt="Colorlib Template"
+                  
                 />
                 <div class="overlay"></div>
               </a>
               <div class="text py-3 pb-4 px-3">
                 <div class="d-flex">
                   <div class="cat">
-                    <span>Lifestyle</span>
+                    <span style="font-weight: bold;color: rgb(79, 79, 79);" ><%=products.brand%></span>
                   </div>
                   <div class="rating">
                     <p class="text-right mb-0">
