--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -225,6 +225,7 @@
             <div class="product d-flex flex-column">
               <a href="/productView/<%=products._id %>" class="img-prod"
                 ><img
+                style="width: 580px;height:360px;"
                   class="img-fluid"
                   src="<%=products.image3%>"
                   alt="Colorlib Template"
