--- a/views/admin/productDetails.ejs
+++ b/views/admin/productDetails.ejs
@@ -197,38 +197,40 @@
                   <div class="modal-content">
                     <div class="modal-header">
                       <h5 class="modal-title" id="exampleModalLabel">Images</h5>
-                      <button
+                      <!-- <button
                         type="button"
                         class="close"
                         data-dismiss="modal"
                         aria-label="Close"
                       >
                         <span aria-hidden="true">&times;</span>
-                      </button>
+                      </button> -->
                     </div>
                     <div class="modal-body">
                       <div class="d-flex justify-content-between">
                         <div
-                          class="d-flex justify-content-center border rounded border-dark p-2 my-2"
+                          class="d-flex flex-column justify-content-between border rounded border-dark p-2 my-2"
                         >
                           <img
                             src="../<%= products.image1 %>"
                             alt="Image 1"
-                            class="me-2"
+                            class="me-2  "
                             style="width: 80px"
                           />
                           <button
                             type="button"
-                            class="btn"
+                            class="btn "
                             data-bs-toggle="modal"
                             data-bs-target="#change1<%=products._id %>"
                           >
-                            <i class="fa-light fa-pencil"></i>
+                            <!-- <i class="fa-dark fa-pencil display-1 bg-dark"></i> -->
+                            <!-- <i class="fa-duotone fa-pencil"></i> -->
+                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                           </button>
                         </div>
 
                         <div
-                          class="d-flex justify-content-center border rounded border-dark p-3 my-2"
+                          class="d-flex flex-column justify-content-between border rounded border-dark p-3 my-2"
                         >
                           <img
                             src="../<%= products.image2 %>"
@@ -242,12 +244,14 @@
                             data-bs-toggle="modal"
                             data-bs-target="#change2<%=products._id %>"
                           >
-                            <i class="fas fa-pencil-alt"></i>
+                          <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+
+                            <!-- <i class="fas fa-pencil-alt"></i> -->
                           </button>
                         </div>
 
                         <div
-                          class="d-flex justify-content-center border rounded border-dark p-3 my-2"
+                          class="d-flex flex-column justify-content-between border rounded border-dark p-3 my-2"
                         >
                           <img
                             src="../<%= products.image3 %>"
@@ -261,7 +265,9 @@
                             data-bs-toggle="modal"
                             data-bs-target="#change3<%=products._id %>"
                           >
-                            <i class="bx bx-edit-alt me-1"></i>
+                          <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+
+                            <!-- <i class="bx bx-edit-alt me-1"></i> -->
                           </button>
                         </div>
                       </div>
