--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -531,7 +531,7 @@
 		crossorigin="anonymous"></script>
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+	// <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 	<script>
 		var myModalEl = document.getElementById('myModal')
 		myModalEl.addEventListener('hidden.bs.modal', function (event) {
@@ -646,6 +646,7 @@
 	</script>
 
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
 	<script src="/js/jquery.min.js"></script>
 	<script src="/js/jquery-migrate-3.0.1.min.js"></script>
@@ -663,7 +664,6 @@
 	<script src="/js/google-map.js"></script>
 	<script src="/js/main.js"></script>
 	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
 
 
 </body>
