--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -532,12 +532,12 @@
 	<script
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
 	// <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-	<script>
-		var myModalEl = document.getElementById('myModal')
-		myModalEl.addEventListener('hidden.bs.modal', function (event) {
+	// <script>
+	// 	var myModalEl = document.getElementById('myModal')
+	// 	myModalEl.addEventListener('hidden.bs.modal', function (event) {
 
-		})
-	</script>
+	// 	})
+	// </script>
 
 	<script>
 		$("#placeOrder").submit((e) => {
