checkout bug ,cart bug solved

--- a/views/admin/subCategory.ejs
+++ b/views/admin/subCategory.ejs
@@ -42,7 +42,7 @@
               <td>
                 <form action="/admin/editSubCategory/<%=subctgry._id%>" method="post">
                   <div class="d-flex">
-                  <input placeholder="Edit category name" name="name" type="text" id="subcategory" class="form-control w-50"  required>                     
+                  <input placeholder="Edit subCategory name" name="name" type="text" id="subcategory" class="form-control w-50"  required>                     
                   <button type="submit" class="btn btn-success">Submit</button>
                   </div>
                 </form>
