--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -159,7 +159,7 @@
 													<label for="firstname">House Name</label>
 													<input type="text" name="housename" id="housename"
 														style="font-weight: bold; color: rgb(92, 92, 92) !important;"
-														class="form-control" placeholder="" fdprocessedid="ib393">
+														class="form-control" placeholder="" fdprocessedid="ib393" required>
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -167,7 +167,7 @@
 													<label for="lastname">Area</label>
 													<input type="text" id="area" name="area"
 														style="font-weight: bold; color:rgb(92, 92, 92) !important;"
-														class="form-control" placeholder="" fdprocessedid="4xtq1b">
+														class="form-control" placeholder="" fdprocessedid="4xtq1b" required>
 												</div>
 											</div>
 
@@ -176,7 +176,7 @@
 													<label for="streetaddress">Land Mark</label>
 													<input type="text" id="landmark" name="landMark"
 														style="font-weight: bold; color: rgb(92, 92, 92) !important;"
-														class="form-control" placeholder="" fdprocessedid="iwf96m">
+														class="form-control" placeholder="" fdprocessedid="iwf96m" required>
 												</div>
 											</div>
 
@@ -185,7 +185,7 @@
 													<label for="streetaddress">District</label>
 													<input type="text" id="district" name="district"
 														style="font-weight: bold; color: rgb(92, 92, 92) !important;"
-														class="form-control" placeholder="" fdprocessedid="4xtq1b">
+														class="form-control" placeholder="" fdprocessedid="4xtq1b" required>
 												</div>
 											</div>
 
@@ -195,7 +195,7 @@
 													<label for="towncity">State</label>
 													<input type="text" id="state" name="state"
 														style="font-weight: bold; color: rgb(92, 92, 92) !important;"
-														class="form-control" placeholder="" fdprocessedid="4iwr3">
+														class="form-control" placeholder="" fdprocessedid="4iwr3" required>
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -203,7 +203,7 @@
 													<label for="postcodezip">Post Office</label>
 													<input type="text" id="postoffice" name="postOffice"
 														style="font-weight: bold; color: rgb(92, 92, 92) !important;"
-														class="form-control" placeholder="" fdprocessedid="y5r53">
+														class="form-control" placeholder="" fdprocessedid="y5r53" required>
 												</div>
 											</div>
 											<div class="w-100"></div>
@@ -212,7 +212,7 @@
 													<label for="phone">Pincode</label>
 													<input type="number" id="pincode" name="pincode"
 														style="font-weight: bold; color: rgb(92, 92, 92) !important;"
-														class="form-control" placeholder="" fdprocessedid="w97al9">
+														class="form-control" placeholder="" fdprocessedid="w97al9" required>
 												</div>
 											</div>
 
