--- a/views/user/ProductView.ejs
+++ b/views/user/ProductView.ejs
@@ -179,7 +179,7 @@
 
 					 
 						  
-						  <a id="addCart<%=product._id%>" onclick="addCart('<%=product._id%>')" class="buy-now btn btn-sm btn-primary " style="width: 10rem;height: 2rem;color: #000;cursor:pointer; " ><button>Add To Cart</button> </a>
+						  <a id="addCart<%=product._id%>" onclick="addCart('<%=product._id%>','<%=userData%>')" class="buy-now btn btn-sm btn-primary " style="width: 10rem;height: 2rem;color: #000;cursor:pointer; " ><button>Add To Cart</button> </a>
 						  
 						  
 						  
@@ -434,29 +434,50 @@
 
 
 <script>
-	function addCart(productId){
-	  const selectedSize = document.querySelector('input[name="size"]:checked').value;
-	  const url = window.location.origin;
-	  try{
-		fetch(`${url}/cart?productid=${productId}&size=${selectedSize}`,{
-		  method:'POST',
-		})
-	  }catch(err){
-		console.log(err);
-		alert('err')
-	  }
+	function addCart(productId, userDetails) {
+		if (!userDetails) {
+			Swal.fire({
+				title: 'User not logged in',
+				text: 'Please log in!',
+				icon: 'error',
+				confirmButtonColor: '#3085d6',
+				confirmButtonText: 'Ok',
+			});
+			return false;
+		}else{
+
+		const selectedSize = document.querySelector('input[name="size"]:checked').value;
+		const url = window.location.origin;
+		
+		try {
+			fetch(`${url}/cart?productid=${productId}&size=${selectedSize}`, {
+				method: 'POST',
+			});
+		} catch (err) {
+			console.log(err);
+			alert('err');
+		}
 	}
-	
+
+
 	document.getElementById("addCart<%=product._id%>").addEventListener("click", function () {
-	  Swal.fire({
-		title: 'Added',
-		text: " Added To Cart",
-		icon: 'success',
-		confirmButtonColor: '#3085d6',
-		confirmButtonText: 'Ok',
-	  })
+		const userData = // Retrieve user data from session or wherever it's stored;
+		
+		addCart('<%=product._id%>');
+		
+		Swal.fire({
+			title: 'Added',
+			text: 'Added to cart',
+			icon: 'success',
+			confirmButtonColor: '#3085d6',
+			confirmButtonText: 'Ok',
+		});
 	});
-	</script>
+}
+
+</script>
+
+
 
 <script src="/js/jquery.min.js"></script>
 <script src="/js/jquery-migrate-3.0.1.min.js"></script>
