--- a/views/user/editAddress.ejs
+++ b/views/user/editAddress.ejs
@@ -140,13 +140,85 @@
                 </div>
                 <div class="col-sm-12 text-right">
                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                    data-bs-target="#exampleModal<%address._id%>">
+                    data-bs-target="#exampleModal<%=address._id%>">
                     Edit Address
                   </button>
                   <button class="btn btn-sm btn-danger mx-1"><i class="fas fa-trash"></i> Delete</button>
                 </div>
               </div>
               <hr>
+			  <div class="modal fade" id="exampleModal<%=address._id%>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+				  <div class="modal-content">
+					<div class="modal-header">
+					  <h5 class="modal-title" id="exampleModalLabel<% address._id %>">Edit Address</h5>
+					  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+						<form action="/editProfileAddress/<%=address._id%>" method="post">
+							<div class="modal-body">
+								<div class="mb-1">
+									<label for="recipient-name"
+										class="col-form-label">Housename:</label>
+									<input required  type="text" value="<%=address.housename%>" class="form-control" id="housename"
+										name="housename" />
+								</div>
+								<div class="mb-3">
+									<label for="recipient-name" class="col-form-label">Area:</label>
+									<input required type="text" value="<%=address.area%>" class="form-control" id="area"
+										name="area" />					
+								</div>
+								<div class="mb-3">
+									<label for="recipient-name" class="col-form-label">Landmark:</label>
+									<input required type="text" value="<%=address.landMark%>" class="form-control" id="landmark"
+										name="landmark" />						
+								</div>
+								<div class="mb-3">
+									<div class="row">
+										<div class="col-md-6 mb-3">
+											<label for="firstName">District</label>
+											<input required type="text" value="<%=address.district%>" class="form-control"
+												id="district" name="district" />
+										</div>
+										<div class="col-md-6 mb-3">
+											<label for="lastName">State</label>
+											<input required type="text" value="<%=address.state%>" class="form-control" id="state"
+												name="state" />
+											
+										</div>
+									</div>
+								</div>
+								<div class="mb-3">
+									<div class="row">
+										<div class="col-md-6 mb-3">
+											<label for="firstName">Post office</label>
+											<input required type="text" value="<%=address.postoffice%>" class="form-control"
+												id="postoffice" name="postoffice" />								
+										</div>
+										<div class="col-md-6 mb-3">
+											<label for="lastName">Pincode</label>
+											<input required type="text" value="<%=address.pin%>" class="form-control" id="pin"
+												name="pin" />
+											
+										</div>
+									</div>
+								</div>
+							</div>
+							
+					 </div>
+					 <div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+							Close
+						</button>
+						<button type="submit" value="submit" class="btn btn-primary">
+							Add
+						</button>
+					</div>
+				  </div>
+				
+				</form>
+				</div>
+			  </div>
             </div>
           </div>
           <% } ) %>
@@ -156,81 +228,8 @@
   </div>
 </section>
 
-<div class="modal fade" id="exampleModal<%userData.addressDetails._id%>" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-            <% userData.addressDetails.forEach((data) => { %>
-		  <div class="modal-content">
-			<div class="modal-header">
-			  <h5 class="modal-title" id="exampleModalLabel<% data._id %>">Edit Address</h5>
-			  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-				<form action="/" method="post">
-					<div class="modal-body">
-						<div class="mb-1">
-							<label for="recipient-name"
-								class="col-form-label">Housename:</label>
-							<input required  type="text" value="<%=data.housename%>" class="form-control" id="housename"
-								name="housename" />
-						</div>
-						<div class="mb-3">
-							<label for="recipient-name" class="col-form-label">Area:</label>
-							<input required type="text" value="<%=data.area%>" class="form-control" id="area"
-								name="area" />					
-						</div>
-						<div class="mb-3">
-							<label for="recipient-name" class="col-form-label">Landmark:</label>
-							<input required type="text" value="<%=data.landMark%>" class="form-control" id="landmark"
-								name="landmark" />						
-						</div>
-						<div class="mb-3">
-							<div class="row">
-								<div class="col-md-6 mb-3">
-									<label for="firstName">District</label>
-									<input required type="text" value="<%=data.district%>" class="form-control"
-										id="district" name="district" />
-								</div>
-								<div class="col-md-6 mb-3">
-									<label for="lastName">State</label>
-									<input required type="text" value="<%=data.state%>" class="form-control" id="state"
-										name="state" />
-									
-								</div>
-							</div>
-						</div>
-						<div class="mb-3">
-							<div class="row">
-								<div class="col-md-6 mb-3">
-									<label for="firstName">Post office</label>
-									<input required type="text" value="<%=data.postoffice%>" class="form-control"
-										id="postoffice" name="postoffice" />								
-								</div>
-								<div class="col-md-6 mb-3">
-									<label for="lastName">Pincode</label>
-									<input required type="text" value="<%=data.pin%>" class="form-control" id="pin"
-										name="pin" />
-									
-								</div>
-							</div>
-						</div>
-					</div>
-					
-			 </div>
-			 <div class="modal-footer">
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-					Close
-				</button>
-				<button type="submit" value="submit" class="btn btn-primary">
-					Add
-				</button>
-			</div>
-		  </div>
-        
-		</form>
-        <% } ) %>
-		</div>
-	  </div>
 
+	  
 
 <footer class="ftco-footer ftco-section">
   <div class="container ">
