--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8764,6 +8764,17 @@ h1, h2, h3, h4, h5,
     width: 5rem;
     letter-spacing: 1px;
    } 
+
+   #edit-buttons{
+    background-color: var(--green);
+    color: #fff;
+    font-weight: bold;
+    width: 8rem;
+    margin-top: 3px;
+    letter-spacing: 1px;
+   } 
+
+
    #shopNow-button{
     background-color:#dbcc8f;
     color: #fff;
