--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="/css/magnific-popup.css">
 
+	<link rel="shortcut icon" type="image/png" href="/images/logo.png">
     <link rel="stylesheet" href="/css/aos.css">
 
     <link rel="stylesheet" href="/css/ionicons.min.css">
