--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -24,6 +24,7 @@
 
 	<link rel="stylesheet" href="/css/aos.css">
 
+	<link rel="shortcut icon" type="image/png" href="/images/logo.png">
 	<link rel="stylesheet" href="/css/ionicons.min.css">
 
 	<link rel="stylesheet" href="/css/bootstrap-datepicker.css">
