--- a/views/user/editAddress.ejs
+++ b/views/user/editAddress.ejs
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="/css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="/css/animate.css">
-    
+    <link rel="shortcut icon" type="image/png" href="/images/logo.png">
     <link rel="stylesheet" href="/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/css/owl.theme.default.min.css">
     <link rel="stylesheet" href="/css/magnific-popup.css">
@@ -106,7 +106,7 @@
       <div class="col-lg-4 pt-5">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="avatar"
+            <img src="<%=userData.profile%>" alt="avatar"
               class="rounded-circle img-fluid" style="width: 150px;">
               <div class="container justify-content-center">
                 <p class="text-muted mb-0">  </p>
@@ -118,15 +118,6 @@
           </div>
         </div>
 
-
-       
-        
-
-         
-        
-             
-             
-          
  
            
       </div>
@@ -143,7 +134,7 @@
                     data-bs-target="#exampleModal<%=address._id%>">
                     Edit Address
                   </button>
-                  <button class="btn btn-sm btn-danger mx-1"><i class="fas fa-trash"></i> Delete</button>
+                  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#deleteAddress"><i class="fas fa-trash"></i> Delete</button>
                 </div>
               </div>
               <hr>
@@ -221,12 +212,38 @@
 			  </div>
             </div>
           </div>
+
+
+		  <!-- delete modal starts here-->
+<div class="modal fade" id="deleteAddress" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal-dialog">
+	  <div class="modal-content">
+		<form action="/deleteAddress/<%=address._id%>" method="post">
+		<div class="modal-header">
+		  <h5 class="modal-title" id="exampleModalLabel">Confirm Message</h5>
+		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		</div>
+		<div class="modal-body d-flex justify-content-center">
+		  <h6>Are you sure want to delete this address</h6>
+		</div>
+		<div class="modal-footer">
+		  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+		  <button type="submit" class="btn btn-primary">Delete</button>
+		</div>
+	  </form>
+	  </div>
+	</div>
+  </div>
+
+  <!-- delete modal ends here -->
           <% } ) %>
                   
       </div>
      </div>
   </div>
 </section>
+
+
 
 
 	  
