--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"
       rel="stylesheet"
     />
-
+    <link rel="shortcut icon" type="image/png" href="/images/logo.png">
     <link rel="stylesheet" href="/css/open-iconic-bootstrap.min.css" />
     <link rel="stylesheet" href="/css/animate.css" />
 
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="/css/aos.css" />
 
     <link rel="stylesheet" href="/css/ionicons.min.css" />
+    <link rel="shortcut icon" type="image/png" href="../images/logo.png">
 
     <link rel="stylesheet" href="/css/bootstrap-datepicker.css" />
     <link rel="stylesheet" href="/css/jquery.timepicker.css" />
@@ -111,7 +112,7 @@
               <div class="card-body" id="editProfile">
                 <div class="d-flex flex-column align-items-center text-center">
                   <img
-                    src="https://bootdey.com/img/Content/avatar/avatar7.png"
+                    src="<%=userData.profile%>"
                     alt="Admin"
                     class="rounded-circle p-1 bg-primary"
                     width="110"
